--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack-stream": "^3.2.0"
+  },
+  "volta": {
+    "node": "6.17.1"
   }
 }
