--- a/src/data/timo_de.yaml
+++ b/src/data/timo_de.yaml
@@ -1,7 +1,7 @@
 ---
 lang: de
 title: "Javascript Developer Timo Zöller"
-introduction: "Hi, Ich bin Timo. Seit sieben Jahren arbeite ich als Frontend-Developer und die letzten fünf davon mit dem Schwerpunkt auf Javascript-Single-Page-Applications und Styleguide-zentrierte-Frontend-Architekturen. Ich habe an großen Customer-Relationship-Management-Systemen mitgebaut und mag die Vorstellung, dass mein Code den Arbeitsalltag anderer Menschen verbessert. Als Arbeitsumfeld schätze ich sich einen Umgang auf Augenhöhe und eine offene sowie verantwortungsvolle Arbeitsatmosphäre. Wenn Sie Interesse an einer Zusammenarbeit haben, dann freue ich mich über eine [Email](mailto:timo@pixelkritzel.de) oder einen Anruf ([+49 171 150 5557](tel:49-171-1505557))."
+introduction: "Hi, Ich bin Timo. Seit zehn Jahren arbeite ich als Frontend-Developer und die letzten fünf davon mit dem Schwerpunkt auf Javascript-Single-Page-Applications und Styleguide-zentrierte-Frontend-Architekturen. Ich habe an großen Customer-Relationship-Management-Systemen mitgebaut und mag die Vorstellung, dass mein Code den Arbeitsalltag anderer Menschen verbessert. Als Arbeitsumfeld schätze ich sich einen Umgang auf Augenhöhe und eine offene sowie verantwortungsvolle Arbeitsatmosphäre. Wenn Sie Interesse an einer Zusammenarbeit haben, dann freue ich mich über eine [Email](mailto:timo@pixelkritzel.de) oder einen Anruf ([+49 171 150 5557](tel:49-171-1505557))."
 imagePath: "/static/images/timo.jpg"
 
 person:
@@ -35,6 +35,20 @@ development:
 selected-projects:
   title: "Ausgewählte Projekte"
   list:
+    -
+      start: 2021
+      end: 2023
+      name: HRworks
+      link: https://www.hrworks.de
+      language: Deutsch
+      description: "Konzeptionierung und Erstellung eines Frameworks zur Konvertierung des bisherigen Frontend-Ansatzes hinzu einem generischen TypeScript React Stack, der wie bisher vom Backend kontrolliert werden kann und zugleich die Möglichkeit bietet Microfrontends für künftige Erweiterungen einzusetzen."
+      used_technologies:
+        - TypeScript
+        - React
+        - MobX
+        - Webpack
+        - node.js
+        - SASS
     -
       start: 2020
       end: 2021
